--- a/bsi-sso-phone-pin-provider/latest/bsi-sso-phone-pin-provider.properties
+++ b/bsi-sso-phone-pin-provider/latest/bsi-sso-phone-pin-provider.properties
@@ -1,4 +1,4 @@
-tema=claro
-tamanio_fuente=14
-animaciones=activado
-idioma=en_US
+tema="claro"
+tamanio_fuente="14"
+animaciones="activado"
+idioma="en_US"
