--- a/bsi-sso-logout-provider/latest/bsi-sso-logout-provider.properties
+++ b/bsi-sso-logout-provider/latest/bsi-sso-logout-provider.properties
@@ -1,4 +1,4 @@
-servidor="example.com"
-puerto="8080"
-usuario="admin"
-contrasena="secreta123"
+servidor=example.com
+puerto=8080
+usuario=admin
+contrasena=secreta123
