--- a/bsi-sso-phone-password-provider/latest/bsi-sso-phone-password-provider.properties
+++ b/bsi-sso-phone-password-provider/latest/bsi-sso-phone-password-provider.properties
@@ -1,4 +1,4 @@
-nombre="Aplicación Uno"
-version="2.0"
-idioma="es_ES"
-modo="desarrollo"
+nombre=Aplicación Uno
+version=2.0
+idioma=es_ES
+modo=desarrollo
