--- a/bsi-sso-username-password-provider/latest/bsi-sso-username-password-provider.properties
+++ b/bsi-sso-username-password-provider/latest/bsi-sso-username-password-provider.properties
@@ -1,4 +1,4 @@
-url_base="http://api.example.org"
-timeout="3000"
-usuario_api="apikey123"
-formato_respuesta="json"
+url_base=http://api.example.org
+timeout=3000
+usuario_api=apikey123
+formato_respuesta=json
